--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-/node_modules
-/.cache
+pids
+logs
+node_modules
+npm-debug.log
+coverage/
+run
+public
+.cache
+.DS_Store
+.nyc_output
+.basement
+config.local.js
+lib
+es
+.doc
+.umi
+.umi-production
