--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "vite": "^4.4.0",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.3"
+    "typescript": "^5.0.0",
+    "gh-pages": "^2.2.0"
   }
 }
